# lucid-agent-oracle

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.ponder  LICENSE  docker-compose.yml  package-lock.json  package.json  speakeasy.yaml
apps/api/: package.json
apps/ponder/: package.json  ponder.config.ts
apps/publisher/: package.json
apps/webhook-worker/: package.json
apps/worker/: package.json
contracts/solana/: Anchor.toml
contracts/solana/programs/lucid-oracle/: Cargo.toml
contracts/solana/programs/lucid-oracle/src/: lib.rs
contracts/solana/programs/lucid-oracle/src/instructions/: rotate_authority.rs
docs/plans/: 2026-03-12-agent-economy-oracle-plan1-data-control-plane.md  2026-03-12-agent-economy-oracle-plan2a-feed-worker.md  2026-03-12-agent-economy-oracle-plan2b-on-chain-publication.md  2026-03-12-agent-economy-oracle-plan4a-adapters-identity.md  2026-03-12-agent-economy-oracle-plan4b-self-registration.md  2026-03-12-plan3a-api-expansion.md
docs/specs/: 2026-03-12-agent-economy-oracle-design.md  2026-03-12-agent-economy-oracle-plan2a-feed-worker-design.md  2026-03-12-agent-economy-oracle-plan2b-on-chain-publication-design.md  2026-03-12-agent-economy-oracle-plan3a-api-expansion-design.md  2026-03-12-agent-economy-oracle-plan4a-adapters-identity-design.md  2026-03-18-no-broker-adapter-mode-design.md
migrations/: 001_control_plane.sql  002_worker_checkpoints.sql  003_update_feed_methodology.sql
migrations/clickhouse/: 001_raw_economic_events.sql  002_metric_rollups_1m.sql  (+1 more)
scripts/: annotate-openapi.ts  export-openapi.ts  sync-sdk-spec.sh
(+89 files in other folders)
