[package]
name = "lucid-oracle"
version = "0.1.0"
description = "Lucid Agent Economy Oracle — publication-only Solana program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lucid_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18"
